# global-workflow

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
ci/: Jenkinsfile  Jenkinsfile4AWS
ctests/: CMakeLists.txt  README.md
env/: AWSPW.env  AZUREPW.env  GAEAC5.env  GAEAC6.env  GOOGLEPW.env  HERA.env  HERCULES.env  JET.env  ORION.env  S4.env  WCOSS2.env
jobs/: JGDAS_ATMOS_ANALYSIS_DIAG  JGDAS_ATMOS_GEMPAK_META_NCDC  JGDAS_ENKF_ARCHIVE  JGDAS_ENKF_ARCHIVE_TARS  JGDAS_ENKF_ARCHIVE_VRFY  JGDAS_ENKF_ECEN  JGDAS_ENKF_SELECT_OBS  JGDAS_ENKF_UPDATE  JGDAS_GLOBAL_OCEAN_ANALYSIS_ECEN  JGFS_ATMOS_GEMPAK_NCDC_UPAPGIF  JGLOBAL_AERO_ANALYSIS_INITIALIZE  JGLOBAL_ARCHIVE  JGLOBAL_ARCHIVE_TARS  JGLOBAL_ARCHIVE_VRFY  JGLOBAL_ATMOS_ANALYSIS  JGLOBAL_ATMOS_ANALYSIS_CALC  JGLOBAL_EXTRACTVARS  JGLOBAL_FETCH  JGLOBAL_MARINE_ANALYSIS_CHECKPOINT  JGLOBAL_MARINE_ANALYSIS_FINALIZE  JGLOBAL_MARINE_ANALYSIS_INITIALIZE  JGLOBAL_MARINE_ANALYSIS_VARIATIONAL  JGLOBAL_SNOWENS_ANALYSIS  JGLOBAL_SNOW_ANALYSIS  JGLOBAL_WAVE_GEMPAK  JGLOBAL_WAVE_POST_SBS  JGLOBAL_WAVE_PRDGEN_GRIDDED
modulefiles/: module_base.gaeac5.lua  module_base.gaeac6.lua  module_base.hera.lua  module_base.noaacloud.lua  module_base.wcoss2.lua  module_gwci.noaacloud.lua  module_gwsetup.gaeac5.lua  module_gwsetup.gaeac6.lua  module_gwsetup.hercules.lua  module_gwsetup.noaacloud.lua  module_gwsetup.orion.lua  module_gwsetup.wcoss2.lua
scripts/: exgdas_aero_analysis_generate_bmatrix.py  exgdas_atmos_gempak_gif_ncdc.sh  exgdas_enkf_earc.py  exgdas_enkf_earc_tars.py  exgdas_enkf_earc_vrfy.py  (+33 more)
(+314 files in other folders)
